--- a/css/main.css
+++ b/css/main.css
@@ -234,3 +234,9 @@ body {
     -webkit-transition: all 0.5s 0.5s ease-out;
     transition: all 0.5s 0.5s ease-out;
 }
+
+.tableUrl {
+	max-width: 200px;
+	overflow-x: auto;
+	white-space: nowrap;
+}
