--- a/css/main.css
+++ b/css/main.css
@@ -45,13 +45,20 @@ body {
     width: 400px;
 }
 
+/* L function chart */
 #chart {
     background-color: white;
+    position: absolute!important;
+    right: 5px;
+    bottom: 5px;
+    width: 61.8vw;
 }
 
 #chart .c3-line {
     stroke-width: 1px;
 }
+
+/* Modal */
 
 .first_title {
     margin-top: 0;
@@ -235,6 +242,8 @@ body {
     transition: all 0.5s 0.5s ease-out;
 }
 
+
+/* Geo Admin */
 .tableUrl {
 	max-width: 200px;
 	overflow-x: auto;
